docs: Fix TOC notebook paths and script error handling
- Updated _toc.yml to use .ipynb extensions for notebooks
- Fixed add_conceptual_content.py error handling for cell sources
- All notebooks copied and ready for Jupyter Book

--- a/docs/book/tutorials/basic_tabular.ipynb
+++ b/docs/book/tutorials/basic_tabular.ipynb
@@ -118,6 +118,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Why Gaussian Mixtures?\n",
+    "\n",
+    "Gaussian mixtures with well-separated clusters are ideal for demonstrating DDC because:\n",
+    "\n",
+    "- **Clustered structure**: DDC excels when data has clear modes (clusters)\n",
+    "- **Spatial coverage**: DDC guarantees all clusters are represented, even small ones\n",
+    "- **Distribution preservation**: The weighted coreset preserves both the location (mean) and shape (covariance) of each cluster\n",
+    "\n",
+    "**Conceptual note**: In high dimensions, k-NN density estimation works well when clusters are separated. Points in dense regions (clusters) have many close neighbors, leading to high density estimates. DDC uses these estimates to prioritize important regions while ensuring diversity (spatial coverage)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What Happens During DDC Fitting?\n",
+    "\n",
+    "The `fit_ddc_coreset` function performs three main steps:\n",
+    "\n",
+    "1. **Density Estimation**: Estimates local density for each point using k-nearest neighbors. Points in dense regions (clusters) get high density scores.\n",
+    "\n",
+    "2. **Greedy Selection**: Iteratively selects points that balance high density (important regions) with diversity (spatial coverage). The `alpha` parameter (default 0.3) controls this trade-off.\n",
+    "\n",
+    "3. **Weight Assignment**: Assigns weights to selected points using soft assignments. A point with weight 0.1 \"stands for\" 10% of the original data in that region.\n",
+    "\n",
+    "**Why weights matter**: Unlike simple sampling where each point represents 1/n of the data, weights allow a small coreset to accurately represent the full distribution. This is similar to how a histogram uses bin counts, but DDC uses actual data points with weights.\n",
+    "\n",
+    "See [Algorithm Overview](../concepts/algorithm.md) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What Happens During DDC Fitting?\n",
+    "\n",
+    "The `fit_ddc_coreset` function performs three main steps:\n",
+    "\n",
+    "1. **Density Estimation**: Estimates local density for each point using k-nearest neighbors. Points in dense regions (clusters) get high density scores.\n",
+    "\n",
+    "2. **Greedy Selection**: Iteratively selects points that balance high density (important regions) with diversity (spatial coverage). The `alpha` parameter (default 0.3) controls this trade-off.\n",
+    "\n",
+    "3. **Weight Assignment**: Assigns weights to selected points using soft assignments. A point with weight 0.1 \"stands for\" 10% of the original data in that region.\n",
+    "\n",
+    "**Why weights matter**: Unlike simple sampling where each point represents 1/n of the data, weights allow a small coreset to accurately represent the full distribution. This is similar to how a histogram uses bin counts, but DDC uses actual data points with weights.\n",
+    "\n",
+    "See [Algorithm Overview](../concepts/algorithm.md) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Generate Dataset\n",
     "\n",
     "We'll create a Gaussian mixture with **3 clusters** and **8 features**. ",
@@ -151,6 +204,21 @@
     "print(f\"Dataset shape: {X.shape}\")\n",
     "print(f\"Number of clusters: {n_clusters}\")\n",
     "print(f\"Cluster sizes: {np.bincount(cluster_labels)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why Gaussian Mixtures?\n",
+    "\n",
+    "Gaussian mixtures with well-separated clusters are ideal for demonstrating DDC because:\n",
+    "\n",
+    "- **Clustered structure**: DDC excels when data has clear modes (clusters)\n",
+    "- **Spatial coverage**: DDC guarantees all clusters are represented, even small ones\n",
+    "- **Distribution preservation**: The weighted coreset preserves both the location (mean) and shape (covariance) of each cluster\n",
+    "\n",
+    "**Conceptual note**: In high dimensions, k-NN density estimation works well when clusters are separated. Points in dense regions (clusters) have many close neighbors, leading to high density estimates. DDC uses these estimates to prioritize important regions while ensuring diversity (spatial coverage)."
    ]
   },
   {
@@ -247,6 +315,44 @@
     ")\n",
     "print(f\"\u2713 Stratified: {len(S_strat)} representatives\")\n",
     "print(\"=\" * 60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What Happens During DDC Fitting?\n",
+    "\n",
+    "The `fit_ddc_coreset` function performs three main steps:\n",
+    "\n",
+    "1. **Density Estimation**: Estimates local density for each point using k-nearest neighbors. Points in dense regions (clusters) get high density scores.\n",
+    "\n",
+    "2. **Greedy Selection**: Iteratively selects points that balance high density (important regions) with diversity (spatial coverage). The `alpha` parameter (default 0.3) controls this trade-off.\n",
+    "\n",
+    "3. **Weight Assignment**: Assigns weights to selected points using soft assignments. A point with weight 0.1 \"stands for\" 10% of the original data in that region.\n",
+    "\n",
+    "**Why weights matter**: Unlike simple sampling where each point represents 1/n of the data, weights allow a small coreset to accurately represent the full distribution. This is similar to how a histogram uses bin counts, but DDC uses actual data points with weights.\n",
+    "\n",
+    "See [Algorithm Overview](../concepts/algorithm.md) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What Happens During DDC Fitting?\n",
+    "\n",
+    "The `fit_ddc_coreset` function performs three main steps:\n",
+    "\n",
+    "1. **Density Estimation**: Estimates local density for each point using k-nearest neighbors. Points in dense regions (clusters) get high density scores.\n",
+    "\n",
+    "2. **Greedy Selection**: Iteratively selects points that balance high density (important regions) with diversity (spatial coverage). The `alpha` parameter (default 0.3) controls this trade-off.\n",
+    "\n",
+    "3. **Weight Assignment**: Assigns weights to selected points using soft assignments. A point with weight 0.1 \"stands for\" 10% of the original data in that region.\n",
+    "\n",
+    "**Why weights matter**: Unlike simple sampling where each point represents 1/n of the data, weights allow a small coreset to accurately represent the full distribution. This is similar to how a histogram uses bin counts, but DDC uses actual data points with weights.\n",
+    "\n",
+    "See [Algorithm Overview](../concepts/algorithm.md) for more details."
    ]
   },
   {
