docs: Add figure saving and markdown references to tutorial notebooks
- Modified notebooks to save figures to images/tutorials/
- Added markdown cells with figure references and captions
- Updated copyright year to 2025 in _config.yml
- Created documentation improvement plan and implementation guides

--- a/docs/book/tutorials/adaptive_distances.ipynb
+++ b/docs/book/tutorials/adaptive_distances.ipynb
@@ -215,6 +215,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Euclidean vs Adaptive distance coreset comparison](images/tutorials/adaptive_distances/euclidean_vs_adaptive.png)\n",
+    "\n",
+    "*Comparison of Euclidean (left) and Adaptive (right) distance modes. Adaptive distances better capture elliptical cluster shapes.*\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -299,6 +308,15 @@
     "## 6. Visualizations\n",
     "\n",
     "Let's visualize the coresets in 2D."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Elliptical cluster visualization with adaptive distances](images/tutorials/adaptive_distances/elliptical_cluster_demo.png)\n",
+    "\n",
+    "*Demonstration of adaptive distances on elliptical clusters. Mahalanobis distance accounts for local covariance structure.*\n"
    ]
   },
   {
