--- a/docs/book/tutorials/label_aware_classification.ipynb
+++ b/docs/book/tutorials/label_aware_classification.ipynb
@@ -513,6 +513,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![PCA projection of label-aware DDC coreset with class labels](images/tutorials/label_aware_classification/pca_projection_with_labels.png)\n",
+    "\n",
+    "*2D PCA projection showing label-aware DDC coreset. Colors represent class labels; point sizes are proportional to weights.*\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -597,6 +606,15 @@
     "- **Covariance Error (Frobenius)**: Difference in covariance matrices\n",
     "- **Correlation Error (Frobenius)**: Difference in correlation matrices\n",
     "- **Maximum Mean Discrepancy (MMD)**: Kernel-based distance between distributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![ROC curve comparison for different coreset methods](images/tutorials/label_aware_classification/roc_curves_comparison.png)\n",
+    "\n",
+    "*ROC curves comparing model performance on different coresets. Label-aware DDC preserves class proportions while maintaining distributional fidelity.*\n"
    ]
   },
   {
