--- a/docs/book/tutorials/multimodal_clusters.ipynb
+++ b/docs/book/tutorials/multimodal_clusters.ipynb
@@ -178,6 +178,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Cluster coverage comparison](images/tutorials/multimodal_clusters/cluster_coverage.png)\n",
+    "\n",
+    "*Cluster coverage visualization showing how DDC ensures all clusters are represented.*\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -257,6 +266,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Spatial coverage metrics bar chart](images/tutorials/multimodal_clusters/spatial_coverage_metrics.png)\n",
+    "\n",
+    "*Spatial coverage metrics comparing minimum and mean distances to nearest representatives.*\n"
    ]
   },
   {
