--- a/_sources/tutorials/basic_tabular.ipynb
+++ b/_sources/tutorials/basic_tabular.ipynb
@@ -251,23 +251,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project to 2D for visualization\n",
-    "if HAS_UMAP:\n",
-    "    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)\n",
-    "    X_2d = reducer.fit_transform(X)\n",
-    "else:\n",
-    "    reducer = PCA(n_components=2, random_state=RANDOM_STATE)\n",
-    "    X_2d = reducer.fit_transform(X)\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels, \n",
-    "                      cmap='viridis', alpha=0.5, s=10)\n",
-    "plt.colorbar(scatter, label='Cluster')\n",
-    "plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')\n",
-    "plt.xlabel('Component 1')\n",
-    "plt.ylabel('Component 2')\n",
-    "plt.tight_layout()\n",
+    "# Project to 2D for visualization",
+    "if HAS_UMAP:",
+    "    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)",
+    "    X_2d = reducer.fit_transform(X)",
+    "else:",
+    "    reducer = PCA(n_components=2, random_state=RANDOM_STATE)",
+    "    X_2d = reducer.fit_transform(X)",
+    "",
+    "plt.figure(figsize=(10, 6))",
+    "scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels, ",
+    "                      cmap='viridis', alpha=0.5, s=10)",
+    "plt.colorbar(scatter, label='Cluster')",
+    "plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')",
+    "plt.xlabel('Component 1')",
+    "plt.ylabel('Component 2')",
+    "plt.tight_layout()",
+    "",
+    "# Save figure",
+    "import os",
+    "os.makedirs('images/tutorials/basic_tabular', exist_ok=True)",
+    "plt.savefig('images/tutorials/basic_tabular/original_data_2d.png', dpi=150, bbox_inches='tight')",
+    "",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2D projection of original Gaussian mixture data with 3 clusters](images/tutorials/basic_tabular/original_data_2d.png)\n",
+    "\n",
+    "*Original dataset projected to 2D using UMAP (or PCA). Colors represent different clusters.*\n"
    ]
   },
   {
@@ -436,41 +451,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project coresets to 2D using same reducer\n",
-    "S_ddc_2d = reducer.transform(S_ddc)\n",
-    "S_random_2d = reducer.transform(S_random)\n",
-    "S_strat_2d = reducer.transform(S_strat)\n",
-    "\n",
-    "# Get cluster labels for coreset points\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "nn = NearestNeighbors(n_neighbors=1)\n",
-    "nn.fit(X)\n",
-    "\n",
-    "_, idx_ddc = nn.kneighbors(S_ddc)\n",
-    "_, idx_random = nn.kneighbors(S_random)\n",
-    "_, idx_strat = nn.kneighbors(S_strat)\n",
-    "\n",
-    "labels_ddc = cluster_labels[idx_ddc.flatten()]\n",
-    "labels_random = cluster_labels[idx_random.flatten()]\n",
-    "labels_strat = cluster_labels[idx_strat.flatten()]\n",
-    "\n",
-    "# Plot spatial coverage\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
-    "\n",
-    "for ax, S_2d, labels, title, w in zip(\n",
-    "    axes, [S_ddc_2d, S_random_2d, S_strat_2d],\n",
-    "    [labels_ddc, labels_random, labels_strat],\n",
-    "    ['DDC', 'Random', 'Stratified'],\n",
-    "    [w_ddc, w_random, w_strat]\n",
-    "):\n",
-    "    scatter = ax.scatter(S_2d[:, 0], S_2d[:, 1], c=labels, \n",
-    "                         cmap='viridis', s=w*1000, alpha=0.7, edgecolors='black', linewidths=0.5)\n",
-    "    ax.set_title(f'{title} Coreset (k={len(S_2d)})', fontsize=12, fontweight='bold')\n",
-    "    ax.set_xlabel('Component 1')\n",
-    "    ax.set_ylabel('Component 2')\n",
-    "    ax.grid(True, alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
+    "# Project coresets to 2D using same reducer",
+    "S_ddc_2d = reducer.transform(S_ddc)",
+    "S_random_2d = reducer.transform(S_random)",
+    "S_strat_2d = reducer.transform(S_strat)",
+    "",
+    "# Get cluster labels for coreset points",
+    "from sklearn.neighbors import NearestNeighbors",
+    "nn = NearestNeighbors(n_neighbors=1)",
+    "nn.fit(X)",
+    "",
+    "_, idx_ddc = nn.kneighbors(S_ddc)",
+    "_, idx_random = nn.kneighbors(S_random)",
+    "_, idx_strat = nn.kneighbors(S_strat)",
+    "",
+    "labels_ddc = cluster_labels[idx_ddc.flatten()]",
+    "labels_random = cluster_labels[idx_random.flatten()]",
+    "labels_strat = cluster_labels[idx_strat.flatten()]",
+    "",
+    "# Plot spatial coverage",
+    "fig, axes = plt.subplots(1, 3, figsize=(18, 5))",
+    "",
+    "for ax, S_2d, labels, title, w in zip(",
+    "    axes, [S_ddc_2d, S_random_2d, S_strat_2d],",
+    "    [labels_ddc, labels_random, labels_strat],",
+    "    ['DDC', 'Random', 'Stratified'],",
+    "    [w_ddc, w_random, w_strat]",
+    "):",
+    "    scatter = ax.scatter(S_2d[:, 0], S_2d[:, 1], c=labels, ",
+    "                         cmap='viridis', s=w*1000, alpha=0.7, edgecolors='black', linewidths=0.5)",
+    "    ax.set_title(f'{title} Coreset (k={len(S_2d)})', fontsize=12, fontweight='bold')",
+    "    ax.set_xlabel('Component 1')",
+    "    ax.set_ylabel('Component 2')",
+    "    ax.grid(True, alpha=0.3)",
+    "",
+    "plt.tight_layout()",
+    "",
+    "# Save figure",
+    "import os",
+    "os.makedirs('images/tutorials/basic_tabular', exist_ok=True)",
+    "plt.savefig('images/tutorials/basic_tabular/spatial_coverage_comparison.png', dpi=150, bbox_inches='tight')",
+    "",
     "plt.show()"
    ]
   },
@@ -510,7 +531,21 @@
     "    ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
+    "# Save figure\n",
+    "import os\n",
+    "os.makedirs('images/tutorials/basic_tabular', exist_ok=True)\n",
+    "plt.savefig('images/tutorials/basic_tabular/spatial_coverage_comparison.png', dpi=150, bbox_inches='tight')\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2D projection comparing spatial coverage of DDC, Random, and Stratified coresets](images/tutorials/basic_tabular/spatial_coverage_comparison.png)\n",
+    "\n",
+    "*Spatial coverage comparison: DDC (left), Random (center), and Stratified (right) coresets. Point sizes are proportional to weights. DDC ensures all clusters are represented, even small ones.*\n"
    ]
   },
   {
@@ -559,6 +594,11 @@
     "axes[1].grid(True, alpha=0.3, axis='y')\n",
     "\n",
     "plt.tight_layout()\n",
+    "# Save figure\n",
+    "import os\n",
+    "os.makedirs('images/tutorials/basic_tabular', exist_ok=True)\n",
+    "plt.savefig('images/tutorials/basic_tabular/metrics_comparison.png', dpi=150, bbox_inches='tight')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -585,6 +625,24 @@
     "- Try `multimodal_clusters.ipynb` for more complex cluster structures\n",
     "- Try `adaptive_distances.ipynb` for advanced features (presets, adaptive distances)\n",
     "- See `docs/DDC_ADVANTAGE_CASES.md` for comprehensive analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Histogram comparison of marginal distributions for DDC, Random, and Stratified coresets](images/tutorials/basic_tabular/marginal_distributions.png)\n",
+    "\n",
+    "*Marginal distribution comparison for the first 4 features. Gray histogram shows full data; colored lines show weighted coreset distributions. DDC better preserves the shape of marginal distributions.*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Bar charts comparing distributional metrics across methods](images/tutorials/basic_tabular/metrics_comparison.png)\n",
+    "\n",
+    "*Distributional metrics comparison (left) and DDC improvement over Random (right). DDC excels at mean preservation but may trade off some covariance accuracy for better cluster coverage.*\n"
    ]
   }
  ],
