--- a/docs/book/tutorials/multimodal_clusters.ipynb
+++ b/docs/book/tutorials/multimodal_clusters.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "# DDC\n",
     "S_ddc, w_ddc, info_ddc = fit_ddc_coreset(\n",
-    "    X, k=k, mode='euclidean', preset='balanced', random_state=RANDOM_STATE\n",
+    "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
     "print(f\"\u2713 DDC: {len(S_ddc)} representatives\")\n",
     "\n",
