docs: Update basic_tabular notebook after execution attempt
- Notebook executed with updated dd-coresets version
- Structure ready for figure generation when execution succeeds

--- a/docs/book/tutorials/basic_tabular.ipynb
+++ b/docs/book/tutorials/basic_tabular.ipynb
@@ -32,10 +32,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:39.680500Z",
-     "iopub.status.busy": "2025-11-15T18:22:39.680341Z",
-     "iopub.status.idle": "2025-11-15T18:22:39.695255Z",
-     "shell.execute_reply": "2025-11-15T18:22:39.694763Z"
+     "iopub.execute_input": "2025-11-15T18:23:27.924446Z",
+     "iopub.status.busy": "2025-11-15T18:23:27.924313Z",
+     "iopub.status.idle": "2025-11-15T18:23:27.928561Z",
+     "shell.execute_reply": "2025-11-15T18:23:27.928206Z"
     }
    },
    "outputs": [],
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:39.697610Z",
-     "iopub.status.busy": "2025-11-15T18:22:39.697376Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.727418Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.726982Z"
+     "iopub.execute_input": "2025-11-15T18:23:27.930834Z",
+     "iopub.status.busy": "2025-11-15T18:23:27.930488Z",
+     "iopub.status.idle": "2025-11-15T18:23:31.118787Z",
+     "shell.execute_reply": "2025-11-15T18:23:31.118357Z"
     }
    },
    "outputs": [
@@ -201,10 +201,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.758464Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.758243Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.767389Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.766785Z"
+     "iopub.execute_input": "2025-11-15T18:23:31.145265Z",
+     "iopub.status.busy": "2025-11-15T18:23:31.145039Z",
+     "iopub.status.idle": "2025-11-15T18:23:31.153018Z",
+     "shell.execute_reply": "2025-11-15T18:23:31.152616Z"
     }
    },
    "outputs": [
@@ -286,10 +286,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.769492Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.769329Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.771779Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.771378Z"
+     "iopub.execute_input": "2025-11-15T18:23:31.154662Z",
+     "iopub.status.busy": "2025-11-15T18:23:31.154552Z",
+     "iopub.status.idle": "2025-11-15T18:23:31.156501Z",
+     "shell.execute_reply": "2025-11-15T18:23:31.156247Z"
     }
    },
    "outputs": [],
@@ -326,10 +326,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.774049Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.773834Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.958380Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.958068Z"
+     "iopub.execute_input": "2025-11-15T18:23:31.157892Z",
+     "iopub.status.busy": "2025-11-15T18:23:31.157795Z",
+     "iopub.status.idle": "2025-11-15T18:23:32.160190Z",
+     "shell.execute_reply": "2025-11-15T18:23:32.159813Z"
     }
    },
    "outputs": [
@@ -342,14 +342,22 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ DDC: 200 representatives\n",
+      "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 8, 'd_effective': 8, 'fallbacks': []}\n"
+     ]
+    },
+    {
      "ename": "TypeError",
-     "evalue": "fit_ddc_coreset() got an unexpected keyword argument 'mode'",
+     "evalue": "fit_random_coreset() got an unexpected keyword argument 'mode'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m60\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# DDC (using default simplest preset)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m S_ddc, w_ddc, info_ddc \u001b[38;5;241m=\u001b[39m \u001b[43mfit_ddc_coreset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43meuclidean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mRANDOM_STATE\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✓ DDC: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(S_ddc)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m representatives\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Pipeline: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minfo_ddc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpipeline\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: fit_ddc_coreset() got an unexpected keyword argument 'mode'"
+      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Pipeline: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minfo_ddc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpipeline\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Random\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m S_random, w_random, info_random \u001b[38;5;241m=\u001b[39m \u001b[43mfit_random_coreset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43meuclidean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mRANDOM_STATE\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\n\u001b[1;32m     16\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✓ Random: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(S_random)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m representatives\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Stratified (by cluster)\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: fit_random_coreset() got an unexpected keyword argument 'mode'"
      ]
     }
    ],
@@ -451,10 +459,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.960320Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.960165Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.966756Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.966369Z"
+     "iopub.execute_input": "2025-11-15T18:23:32.162248Z",
+     "iopub.status.busy": "2025-11-15T18:23:32.162097Z",
+     "iopub.status.idle": "2025-11-15T18:23:32.168476Z",
+     "shell.execute_reply": "2025-11-15T18:23:32.167995Z"
     }
    },
    "outputs": [],
@@ -552,22 +560,22 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.968585Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.968301Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.979312Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.979001Z"
+     "iopub.execute_input": "2025-11-15T18:23:32.171170Z",
+     "iopub.status.busy": "2025-11-15T18:23:32.170942Z",
+     "iopub.status.idle": "2025-11-15T18:23:32.652710Z",
+     "shell.execute_reply": "2025-11-15T18:23:32.652453Z"
     }
    },
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'S_ddc' is not defined",
+     "evalue": "name 'S_random' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Compute metrics for all methods\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m metrics_ddc \u001b[38;5;241m=\u001b[39m compute_metrics(X, \u001b[43mS_ddc\u001b[49m, w_ddc, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDDC\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m metrics_random \u001b[38;5;241m=\u001b[39m compute_metrics(X, S_random, w_random, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m metrics_strat \u001b[38;5;241m=\u001b[39m compute_metrics(X, S_strat, w_strat, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStratified\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'S_ddc' is not defined"
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Compute metrics for all methods\u001b[39;00m\n\u001b[1;32m      2\u001b[0m metrics_ddc \u001b[38;5;241m=\u001b[39m compute_metrics(X, S_ddc, w_ddc, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDDC\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m metrics_random \u001b[38;5;241m=\u001b[39m compute_metrics(X, \u001b[43mS_random\u001b[49m, w_random, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m metrics_strat \u001b[38;5;241m=\u001b[39m compute_metrics(X, S_strat, w_strat, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStratified\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Create comparison table\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'S_random' is not defined"
      ]
     }
    ],
@@ -609,10 +617,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.981073Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.980919Z",
-     "iopub.status.idle": "2025-11-15T18:22:43.983325Z",
-     "shell.execute_reply": "2025-11-15T18:22:43.982954Z"
+     "iopub.execute_input": "2025-11-15T18:23:32.654574Z",
+     "iopub.status.busy": "2025-11-15T18:23:32.654419Z",
+     "iopub.status.idle": "2025-11-15T18:23:32.656746Z",
+     "shell.execute_reply": "2025-11-15T18:23:32.656384Z"
     }
    },
    "outputs": [],
@@ -625,22 +633,22 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:43.985080Z",
-     "iopub.status.busy": "2025-11-15T18:22:43.984939Z",
-     "iopub.status.idle": "2025-11-15T18:22:44.218832Z",
-     "shell.execute_reply": "2025-11-15T18:22:44.218404Z"
+     "iopub.execute_input": "2025-11-15T18:23:32.658282Z",
+     "iopub.status.busy": "2025-11-15T18:23:32.658137Z",
+     "iopub.status.idle": "2025-11-15T18:23:33.301397Z",
+     "shell.execute_reply": "2025-11-15T18:23:33.300859Z"
     }
    },
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'S_ddc' is not defined",
+     "evalue": "name 'S_random' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m ax\u001b[38;5;241m.\u001b[39mhist(X[:, dim], bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFull Data\u001b[39m\u001b[38;5;124m'\u001b[39m, density\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Weighted histograms for coresets\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m S, w, label, color \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[0;32m---> 13\u001b[0m     (\u001b[43mS_ddc\u001b[49m, w_ddc, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDDC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     14\u001b[0m     (S_random, w_random, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     15\u001b[0m     (S_strat, w_strat, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStratified\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m ]:\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;66;03m# Sample from weighted distribution\u001b[39;00m\n\u001b[1;32m     18\u001b[0m     n_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5000\u001b[39m\n\u001b[1;32m     19\u001b[0m     probs \u001b[38;5;241m=\u001b[39m w \u001b[38;5;241m/\u001b[39m w\u001b[38;5;241m.\u001b[39msum()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'S_ddc' is not defined"
+      "Cell \u001b[0;32mIn[9], line 14\u001b[0m\n\u001b[1;32m      9\u001b[0m ax\u001b[38;5;241m.\u001b[39mhist(X[:, dim], bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFull Data\u001b[39m\u001b[38;5;124m'\u001b[39m, density\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Weighted histograms for coresets\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m S, w, label, color \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[1;32m     13\u001b[0m     (S_ddc, w_ddc, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDDC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[0;32m---> 14\u001b[0m     (\u001b[43mS_random\u001b[49m, w_random, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     15\u001b[0m     (S_strat, w_strat, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStratified\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m ]:\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;66;03m# Sample from weighted distribution\u001b[39;00m\n\u001b[1;32m     18\u001b[0m     n_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5000\u001b[39m\n\u001b[1;32m     19\u001b[0m     probs \u001b[38;5;241m=\u001b[39m w \u001b[38;5;241m/\u001b[39m w\u001b[38;5;241m.\u001b[39msum()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'S_random' is not defined"
      ]
     },
     {
@@ -707,10 +715,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:22:44.220875Z",
-     "iopub.status.busy": "2025-11-15T18:22:44.220641Z",
-     "iopub.status.idle": "2025-11-15T18:22:44.301178Z",
-     "shell.execute_reply": "2025-11-15T18:22:44.300747Z"
+     "iopub.execute_input": "2025-11-15T18:23:33.304107Z",
+     "iopub.status.busy": "2025-11-15T18:23:33.303287Z",
+     "iopub.status.idle": "2025-11-15T18:23:33.467428Z",
+     "shell.execute_reply": "2025-11-15T18:23:33.467060Z"
     }
    },
    "outputs": [
